--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -50,6 +50,10 @@
   font-family: 'Font Awesome 6 Sharp';
 }
 
+@mixin fa-family-sharp-duotone() {
+  font-family: 'Font Awesome 6 Sharp Duotone';
+}
+
 // convenience mixins for declaring pseudo-elements by CSS variable,
 // including all style-specific font properties, and both the ::before
 // and ::after elements in the duotone case.
@@ -61,7 +65,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-regular($fa-var) {
   @extend %fa-icon;
   @extend .fa-regular;
@@ -70,7 +73,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-light($fa-var) {
   @extend %fa-icon;
   @extend .fa-light;
@@ -79,7 +81,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-thin($fa-var) {
   @extend %fa-icon;
   @extend .fa-thin;
@@ -88,7 +89,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-duotone($fa-var) {
   @extend %fa-icon;
   @extend .fa-duotone;
@@ -100,7 +100,6 @@
     content: unquote("\"#{ $fa-var }#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-sharp-solid($fa-var) {
   @extend %fa-icon;
   @extend .fa-sharp-solid;
@@ -109,7 +108,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-sharp-regular($fa-var) {
   @extend %fa-icon;
   @extend .fa-sharp-regular;
@@ -118,7 +116,6 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
 @mixin fa-icon-sharp-light($fa-var) {
   @extend %fa-icon;
   @extend .fa-sharp-light;
@@ -127,7 +124,22 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
+@mixin fa-icon-sharp-thin($fa-var) {
+  @extend %fa-icon;
+  @extend .fa-sharp-thin;
 
+  &::before {
+    content: unquote("\"#{ $fa-var }\"");
+  }
+}
+@mixin fa-icon-sharp-duotone-solid($fa-var) {
+  @extend %fa-icon;
+  @extend .fa-sharp-duotone-solid;
+
+  &::before {
+    content: unquote("\"#{ $fa-var }\"");
+  }
+}
 @mixin fa-icon-brands($fa-var) {
   @extend %fa-icon;
   @extend .fa-brands;
@@ -136,4 +148,3 @@
     content: unquote("\"#{ $fa-var }\"");
   }
 }
-
