--- a/scss/sharp-thin.scss
+++ b/scss/sharp-thin.scss
@@ -7,21 +7,21 @@
 @import 'variables';
 
 :root, :host {
-  --#{$fa-css-prefix}-style-family-classic: '#{ $fa-style-family }';
-  --#{$fa-css-prefix}-font-thin: normal 100 1em/1 '#{ $fa-style-family }';
+  --#{$fa-css-prefix}-style-family-sharp: 'Font Awesome 6 Sharp';
+  --#{$fa-css-prefix}-font-sharp-thin: normal 100 1em/1 'Font Awesome 6 Sharp';
 }
 
 
 @font-face {
-  font-family: 'Font Awesome 6 Pro';
+  font-family: 'Font Awesome 6 Sharp';
   font-style: normal;
   font-weight: 100;
   font-display: $fa-font-display;
-  src: url('#{$fa-font-path}/fa-thin-100.woff2') format('woff2'),
-    url('#{$fa-font-path}/fa-thin-100.ttf') format('truetype');
+  src: url('#{$fa-font-path}/fa-sharp-thin-100.woff2') format('woff2'),
+    url('#{$fa-font-path}/fa-sharp-thin-100.ttf') format('truetype');
 }
 
-.fat,
+.fast,
 .#{$fa-css-prefix}-thin {
   font-weight: 100;
 }
