--- a/css/sharp-thin.css
+++ b/css/sharp-thin.css
@@ -5,15 +5,15 @@
  */
 :root, :host {
   --fa-style-family-sharp: 'Font Awesome 6 Sharp';
-  --fa-font-sharp-solid: normal 900 1em/1 'Font Awesome 6 Sharp'; }
+  --fa-font-sharp-thin: normal 100 1em/1 'Font Awesome 6 Sharp'; }
 
 @font-face {
   font-family: 'Font Awesome 6 Sharp';
   font-style: normal;
-  font-weight: 900;
+  font-weight: 100;
   font-display: block;
-  src: url("../webfonts/fa-sharp-solid-900.woff2") format("woff2"), url("../webfonts/fa-sharp-solid-900.ttf") format("truetype"); }
+  src: url("../webfonts/fa-sharp-thin-100.woff2") format("woff2"), url("../webfonts/fa-sharp-thin-100.ttf") format("truetype"); }
 
-.fass,
-.fa-solid {
-  font-weight: 900; }
+.fast,
+.fa-thin {
+  font-weight: 100; }
