--- a/less/sharp-thin.less
+++ b/less/sharp-thin.less
@@ -7,19 +7,19 @@
 
 :root, :host {
   --@{fa-css-prefix}-style-family-sharp: 'Font Awesome 6 Sharp';
-  --@{fa-css-prefix}-font-sharp-light: normal 300 1em/1 'Font Awesome 6 Sharp';
+  --@{fa-css-prefix}-font-sharp-thin: normal 100 1em/1 'Font Awesome 6 Sharp';
 }
 
 @font-face {
   font-family: 'Font Awesome 6 Sharp';
   font-style: normal;
-  font-weight: 300;
+  font-weight: 100;
   font-display: @fa-font-display;
-  src: url('@{fa-font-path}/fa-sharp-light-300.woff2') format('woff2'),
-    url('@{fa-font-path}/fa-sharp-light-300.ttf') format('truetype');
+  src: url('@{fa-font-path}/fa-sharp-thin-100.woff2') format('woff2'),
+    url('@{fa-font-path}/fa-sharp-thin-100.ttf') format('truetype');
 }
 
-.fasl,
-.@{fa-css-prefix}-light {
-  font-weight: 300;
+.fast,
+.@{fa-css-prefix}-thin {
+  font-weight: 100;
 }
